# tarzan1

./: .gitignore  MIGRATION.md  MIGRATION_V0_3.md  README.md  pyproject.toml
artifacts/: coupled_embodiment_selection_v1.json  embodied_attribution_dev_0_9.json  embodied_rearrangement_dev_100_109.json  industrial_arm_panda_v1_validation.json  industrial_envelope_dev.json  light_sortable_physical_smoke.json  light_sortable_retention_ladder.json  light_sortable_transport_attribution.json  packcell_attribution_ladder.json  packcell_candidate_search.json  packcell_final_attribution_v1_infrastructure_failed.json  packcell_final_attribution_v2.json  packcell_geometry_audit.json  packcell_grasp_isolation.json  packcell_layout_manifest.json  packcell_layout_results.jsonl  packcell_layout_sweep.json  packcell_reachability.json  packing_program.json  packing_report_belief.json  packing_report_oracle.json  panda_aperture_sweep.json  panda_aperture_sweep_analysis.json  panda_compatible_width_sweeps.json  panda_contact_controller.json  panda_dynamic_grasp_ladder.json  panda_final_grasp_decision.json  panda_grasp_compatibility_matrix.json  panda_grasp_lift_diagnostics.json  panda_gripper_control_audit.json  panda_gripper_geometry_audit.json  panda_reset_clearance_map.json  product_embodiment_decision_v1.json
configs/: amazon_small_sortable_v1.json  coupled_embodiment_candidates_v1.json  end_effector_requirements_amazon_small_sortable_v1.json  hybrid_end_effector_portfolio_v1.json  industrial_arm_panda_v1.json  industrial_arm_ur10e_proxy_v1.json  light_sortable_v1.json  stack.yaml
(+213 files in other folders)
