[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "osc"
version = "0.0.1"
description = "One-Shot Task Compiler: compile one demonstration into an executable, transferable task program."
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
# GPU / photoreal backend, installed only where CUDA is available.
maniskill = ["mani-skill>=3.0.0", "torch"]
dev = ["pytest>=7"]

[project.scripts]
osc-demo = "osc.run_demo:main"
osc-bench = "osc.run_bench:main"
osc-ablations = "osc.run_ablations:main"
osc-hard-audit = "osc.run_hard_audit:main"
osc-correspondence-audit = "osc.run_correspondence_audit:main"
osc-pack-demo = "osc.run_pack_demo:main"
osc-pack-bench = "osc.run_pack_bench:main"
osc-pack-mujoco-demo = "osc.run_pack_mujoco_demo:main"
osc-pack-mujoco-bench = "osc.run_pack_mujoco_bench:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
